--- a/pizza-store-initial/manifest.yml
+++ b/pizza-store-initial/manifest.yml
@@ -1,8 +1,8 @@
 ---
 applications:
-- name: pizza-store-pcc-client
+- name: pizza-store-pcc-client-kayla
   random-route: false
   path: target/pizza-store-pcc-client-0.0.1-SNAPSHOT.jar
   services:
-  - workshop-pcc
-  - workshop-db
+  - pcc-workshop-cache
+  - kayla-db
